# suggestions-bot

./: .dockerignore  .gitignore  Dockerfile  SECURITY.md  convert.py  count.py  da.json  example-docker-compose.yml  library_modifications.md  main.py  package.json  pyproject.toml  readme.md  requirements.txt  t.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: push-bot.yml  test.yml
suggestions/: __init__.py  bot.py  checks.py  codes.py  colors.py  constants.py  cooldown_bucket.py  database.py  emojis.py  exceptions.py  garven.py  http_error_parser.py  interaction_handler.py  main.py  qs_paginator.py  scheduler.py  state.py  stats.py  zonis_routes.py
suggestions/abc/: loadable.py  object_t.py
suggestions/buttons/: __init__.py  suggestions_components.py  virtual_queue.py
suggestions/clunk/: __init__.py  cache.py  clunk.py  lock.py
suggestions/clunk2/: __init__.py  edits.py
suggestions/cogs/: blacklist_cog.py  blocking_cog.py  config_cog.py  guild_config_cog.py  help_guild_cog.py  suggestion_cog.py  suggestion_notes_cog.py  suggestion_queue_cog.py  suggestions_message_commands.py  user_config_cog.py  view_voters_cog.py
suggestions/core/: __init__.py  base.py  suggestion_notes.py  suggestion_resolution.py  suggestions_queue.py
suggestions/locales/: README.md  da.json  de.json  en_GB.json  en_US.json  es_ES.json  fr.json  pt_BR.json  tr.json
suggestions/low_level/: __init__.py  disnake_state.py  message_editing.py
suggestions/objects/: __init__.py  error.py  guild_config.py  premium_guild_config.py  queued_suggestion.py  suggestion.py  user_config.py
suggestions/objects/stats/: __init__.py  member_command_stats.py  member_stats.py
suggestions/premium/: suggest_cooldowns.py
suggestions/queued_suggestions_util/: __init__.py
suggestions/telemetry/: error_telemetry.py  main.py
suggestions/utility/: __init__.py  bot_lists.py  disnake_paginator.py  error_wrapper.py  r2.py
tests/: conftest.py  helpers.py  test_bot.py  test_clunk.py  test_disnake.py  test_help_guild_cog.py  test_interaction_handler.py  test_user_config_cog.py
tests/mocks/: __init__.py  database.py
