[project]
name = "suggestions-bot"
version = "3.30"
description = "A Discord bot designed to build better communities by encouraging a positive and constructive relationship between community and staff."
authors = [{ name = "Suggestions Bot" }]
requires-python = ">=3.13"
readme = "readme.md"
license = "AGPL-3.0"
dependencies = [
    "disnake[speed]==2.10.1",
    "alaric>=1.5.0,<2",
    "function-cooldowns>=2.0.1,<3",
    "httpx>=0.28.1,<0.29",
    "orjson>=3.10.11,<4",
    "skelmis-commons>=1.4.0,<2",
    "zonis>=2.1.0,<3",
    "aiobotocore>=2.15.2,<3",
    "typing-extensions>=4.12.2,<5",
    "python-dotenv>=1.0.1,<2",
    "humanize>=4.11.0,<5",
    "disnake-ext-components",
    "tenacity>=9.1.2",
    "redis[hiredis]>=6.4.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "infisicalsdk>=1.0.14",
]

[dependency-groups]
dev = [
    "causar>=0.2.0,<0.3",
    "mongomock-motor>=0.0.34,<0.0.35",
    "mongomock>=4.2.0.post1,<5",
    "motor-stubs>=1.7.1,<2",
    "pytest>=8.3.3,<9",
    "pytest-asyncio>=0.24.0,<0.25",
    "black>=24.10.0,<25",
]

[tool.uv]
package = false

[tool.uv.sources]
disnake-ext-components = { git = "https://github.com/suggestionsbot/disnake-ext-components.git", rev = "docs" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
